Policy-enforcement-OPA/Constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyImages
metadata:
  name: deny-certain-images
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    deniedImages:
      - "nginx:latest"
