Policy-enforcement-OPA/Lable-constrain.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-environment-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default" 
    excludedNamespaces:
      - "kube-system"
      - "gatekeeper-system"
      - "calico-system"
  parameters:
    labels:
      - "env"
