Policy-enforcement-OPA/Lable-constraintTamplate.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: 
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

        violation[{"msg": msg}] {
          required_labels := input.parameters.labels
          not input.review.object.metadata.labels

          label := required_labels[_]
          msg := sprintf("Label '%s' is required but not provided.", [label])
        }

        violation[{"msg": msg}] {
          required_labels := input.parameters.labels
          provided_labels := input.review.object.metadata.labels

          label := required_labels[_]
          not provided_labels[label]

          msg := sprintf("Label '%s' is required but not provided.", [label])
        }
